Adjusted threat assessment logic to handle velocity and time filtering correctly. Updated tests.