@@ -10,9 +10,8 @@ import com.challenge.ship.coordination.dispatchservice.model.TemporalPosition;
 import com.challenge.ship.coordination.dispatchservice.model.ThreatStatus;
 import com.challenge.ship.coordination.dispatchservice.model.VelocityVector;
 import com.challenge.ship.coordination.dispatchservice.repository.ShipRepository;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.MethodOrderer;
@@ -39,90 +38,96 @@ class CollisionDetectorServiceTest {
 
   @Test
   @Order(1)
-  @DisplayName("assesThreat when less than two ships registered return GREEN")
-  void assesThreat_whenShipHistoryLessThanTwo_returnsGreen() {
+  @DisplayName("assesThreat when less than two ships registered returns GREEN")
+  void assesThreat_whenLessThanTwoShips_returnsGreen() {
     String shipId = "ship123";
-    MockPosition currPosition = new MockPosition(1000, 10, 10);
+    TemporalPosition currPosition = new MockPosition(1000, 10, 10);
+    ShipPosition ownPos = new ShipPosition(currPosition, 0, ThreatStatus.GREEN);
 
     when(shipRepository.getShipPositions(shipId))
-        .thenReturn(Optional.of(
-            Collections.singletonList(new ShipPosition(currPosition, 0, ThreatStatus.GREEN))));
+        .thenReturn(Optional.of(List.of(ownPos)));
 
-    ThreatStatus threatStatus = collisionDetectorService.assesThreat(shipId, currPosition);
+    when(shipRepository.getAllShipsPositions())
+        .thenReturn(Map.of(shipId, List.of(ownPos)));
 
-    assertEquals(ThreatStatus.GREEN, threatStatus);
+    ThreatStatus result = collisionDetectorService.assesThreat(shipId, currPosition);
+
+    assertEquals(ThreatStatus.GREEN, result);
   }
 
   @Test
   @Order(2)
-  @DisplayName("assesThreat when no other ships have sufficient position history must return GREEN")
-  void assesThreat_whenNoOtherShipHasSufficientHistory_returnsGreen() {
+  @DisplayName("assesThreat when other ships have no positions before curr returns GREEN")
+  void assesThreat_whenOtherShipsHaveNoValidHistory_returnsGreen() {
     String shipId = "ship123";
     TemporalPosition curr = new MockPosition(1000, 10, 10);
-
-    ShipPosition pos = new ShipPosition(curr, 0, ThreatStatus.GREEN);
+    ShipPosition own = new ShipPosition(curr, 0, ThreatStatus.GREEN);
 
     when(shipRepository.getShipPositions(shipId))
-        .thenReturn(Optional.of(Arrays.asList(pos, pos)));
+        .thenReturn(Optional.of(List.of(own, own)));
+
+    TemporalPosition future = new MockPosition(1500, 20, 20);
+    ShipPosition futurePos = new ShipPosition(future, 0, ThreatStatus.GREEN);
+
     when(shipRepository.getAllShipsPositions())
-        .thenReturn(Collections.singletonMap("ship456",
-            List.of(new ShipPosition(curr, 0, ThreatStatus.GREEN))));
+        .thenReturn(Map.of("ship999", List.of(futurePos)));
 
-    ThreatStatus threatStatus = collisionDetectorService.assesThreat(shipId, curr);
+    ThreatStatus result = collisionDetectorService.assesThreat(shipId, curr);
 
-    assertEquals(ThreatStatus.GREEN, threatStatus);
+    assertEquals(ThreatStatus.GREEN, result);
   }
 
   @Test
   @Order(3)
-  @DisplayName("assesThreat when collision predicted must return RED")
+  @DisplayName("assesThreat when collision predicted returns RED")
   void assesThreat_whenCollisionPredicted_returnsRed() {
     String shipId = "ship123";
     TemporalPosition curr = new MockPosition(1000, 10, 10);
-    ShipPosition ownPosition = new ShipPosition(curr, 0, ThreatStatus.GREEN);
+    ShipPosition ownPrev = new ShipPosition(new MockPosition(900, 9, 10), 0, ThreatStatus.GREEN);
+    ShipPosition ownCurr = new ShipPosition(curr, 0, ThreatStatus.GREEN);
 
     when(shipRepository.getShipPositions(shipId))
-        .thenReturn(Optional.of(Arrays.asList(ownPosition, ownPosition)));
+        .thenReturn(Optional.of(List.of(ownPrev, ownCurr)));
 
-    TemporalPosition otherCurr = new MockPosition(1000, 10, 10);
-    ShipPosition otherShipPosition = new ShipPosition(otherCurr, 0, ThreatStatus.GREEN);
+    ShipPosition otherPrev = new ShipPosition(new MockPosition(900, 11, 10), 0, ThreatStatus.GREEN);
+    ShipPosition otherCurr = new ShipPosition(new MockPosition(1000, 12, 10), 0, ThreatStatus.GREEN);
+
     when(shipRepository.getAllShipsPositions())
-        .thenReturn(Collections.singletonMap("ship456", Arrays.asList(otherShipPosition, otherShipPosition)));
+        .thenReturn(Map.of("ship456", List.of(otherPrev, otherCurr)));
 
-    VelocityVector ownVelocityVector = new VelocityVector(1, 0);
-    VelocityVector otherVelocityVector = new VelocityVector(1, 0);
-    when(velocityService.calculateVelocityVector(any(), any())).thenReturn(ownVelocityVector)
-        .thenReturn(otherVelocityVector);
+    when(velocityService.calculateVelocityVector(any(), any()))
+        .thenReturn(new VelocityVector(1, 0))
+        .thenReturn(new VelocityVector(-1, 0));
 
-    ThreatStatus threatStatus = collisionDetectorService.assesThreat(shipId, curr);
+    ThreatStatus result = collisionDetectorService.assesThreat(shipId, curr);
 
-    assertEquals(ThreatStatus.RED, threatStatus);
+    assertEquals(ThreatStatus.RED, result);
   }
 
   @Test
   @Order(4)
-  @DisplayName("assesThreat when ships are approaching but not colliding must return YELLOW")
-  void assesThreat_whenShipsApproachingButNotColliding_returnsYellow() {
+  @DisplayName("assesThreat when ships approach to exactly distance 1 returns YELLOW")
+  void assesThreat_whenShipsApproachToOne_returnsYellow() {
     String shipId = "ship123";
     TemporalPosition curr = new MockPosition(1000, 10, 10);
-    ShipPosition ownPosition = new ShipPosition(curr, 0, ThreatStatus.GREEN);
+    ShipPosition ownPrev = new ShipPosition(new MockPosition(900, 9, 10), 0, ThreatStatus.GREEN);
+    ShipPosition ownCurr = new ShipPosition(curr, 0, ThreatStatus.GREEN);
 
     when(shipRepository.getShipPositions(shipId))
-        .thenReturn(Optional.of(Arrays.asList(ownPosition, ownPosition)));
+        .thenReturn(Optional.of(List.of(ownPrev, ownCurr)));
 
-    TemporalPosition otherCurr = new MockPosition(1000, 10, 11);
-    ShipPosition otherShipPosition = new ShipPosition(otherCurr, 0, ThreatStatus.GREEN);
+    ShipPosition otherPrev = new ShipPosition(new MockPosition(900, 13, 10), 0, ThreatStatus.GREEN);
+    ShipPosition otherCurr = new ShipPosition(new MockPosition(1000, 13, 10), 0, ThreatStatus.GREEN);
+
     when(shipRepository.getAllShipsPositions())
-        .thenReturn(Collections.singletonMap("ship456", Arrays.asList(otherShipPosition, otherShipPosition)));
+        .thenReturn(Map.of("ship456", List.of(otherPrev, otherCurr)));
 
-    VelocityVector ownVelocityVector = new VelocityVector(1, 0);
-    VelocityVector otherVelocityVector = new VelocityVector(1, 0);
     when(velocityService.calculateVelocityVector(any(), any()))
-        .thenReturn(ownVelocityVector)
-        .thenReturn(otherVelocityVector);
+        .thenReturn(new VelocityVector(1, 0))
+        .thenReturn(new VelocityVector(-1, 0));
 
-    ThreatStatus threatStatus = collisionDetectorService.assesThreat(shipId, curr);
+    ThreatStatus result = collisionDetectorService.assesThreat(shipId, curr);
 
-    assertEquals(ThreatStatus.YELLOW, threatStatus);
+    assertEquals(ThreatStatus.YELLOW, result);
   }
 }
